deployments/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knote
  template:
    metadata:
      labels:
        app: knote
    spec:
      containers:
        - name: app
          image: lucianoprea1999/cloudstock
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
