deployments/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: lucianoprea1999/cloudstockfrontend
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
